--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "math-magicians",
   "version": "0.1.0",
-  "homepage": "https://EidHachem.github.io/math-magicians",
+  "homepage": "https://EidHachem.github.io/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
